# iarc-mission8

./: .gitignore  .rosinstall  .travis.yml  README.md  frames.gv  requirements.txt
iarc_arbiter/: CMakeLists.txt
iarc_arbiter/scripts/: arbiter.py  arbiter_lite.py  transformers.py
iarc_embedded/: CMakeLists.txt  package.xml
iarc_embedded/pcb/estop_custom_board/: .gitignore  Outline.dxf  _autosave-estop_custom_board.kicad_pcb  custom_parts.dcm  custom_parts.lib  esp8266.lib  estop_custom_board-cache.lib  estop_custom_board-rescue.lib  estop_custom_board.bak  estop_custom_board.kicad_pcb  estop_custom_board.kicad_pcb-bak  estop_custom_board.net  estop_custom_board.pro  estop_custom_board.sch  fp-info-cache  fp-lib-table  sym-lib-table
iarc_embedded/pcb/estop_custom_board/roomba_pcb.pretty/: NODEMCU.kicad_mod  Outline.kicad_mod
iarc_embedded/scripts/: boot.py  config.py  iarc_micropython.py  main.py
iarc_forebrain/: CMakeLists.txt  setup.py
iarc_forebrain/scripts/: CrazyAwesomeSquare.py  Drone.py  NathanTracking.py  StarNathan.py  TurnSquare.py  TurnToFace.py  aselker_helmet_tracker.py  behaviors_test.py  behaviortree_test.py  color_tracker_node.py  dieter_example_behavior.py  dieter_helmet_tracker_logic.py  drone_color_tracker.py  example_behavior.py  example_behavior_david.py  finger_tracker.py  fly_a_square.py  follow_gesture.py  forebrain.py  gimbalTest.py  helmet_tracker_logic.py  helmet_tracker_logic_mark.py  pointing_detection.py  ros_opencv_example.py  star-mark.py  star.py  test_rotate.py  voiceToDrone.py
iarc_forebrain/scripts/Planner/: Drone.py  command.fsg  command.gram  dance.py  follow_gesture.py  follow_person.py  frames.gv  http_ros_bridge.py  land.py  mode.py  move.py  photo.py  planner.py  pointing_detection.py  takeoff_land.py  tilt.py  turn.py  voice_interface.py
iarc_forebrain/scripts/Planner/onboarding/: dance.py
iarc_forebrain/scripts/util/: Drone.py
iarc_forebrain/src/iarc_forebrain/: behaviortree.py
iarc_fuses/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
iarc_fuses/cmake_modules/: FindG2O.cmake
iarc_fuses/config/: perception.yaml  sphinx.yml
iarc_fuses/include/: frame.hpp  g2o_custom_types.hpp  landmark.hpp  loop_closure.hpp  matcher.hpp  subframes.hpp  tracker.hpp  utils.hpp
iarc_fuses/launch/: hud.launch  perception.launch
iarc_fuses/scripts/: PicTesterPublisher.py  QRCombiner.py  QRDetector.py  QRDetector2.py  QRGenerator.py  QRNode.py  QRNodeOnePipe.py  QRNodeSemester1Demo.py  QRTester.py  camstitcher.py  demo.sh  detector_node.py  noisy_tf.py  perception_node.py  qr_node.py  sphinx.sh  tracker_node.py
iarc_fuses/scripts/tools/: color_tuner.py  qr_generator.py  video_labeler.py
iarc_fuses/src/: backend_impl.cpp  backend_node.cpp  backend_node_simple.cpp  loop_closure.cpp  loop_closure_test.cpp  sample.cpp  sphinx_logger.cpp  utils.cpp
iarc_fuses/src/iarc_fuses/: bbox_time_filter.py  box_utils.py  camera_handle.py  color_detector.py  detect_config.py  helmet_detect.py  object_detection_tf.py  object_track.py  person_detect.py  person_helmet_detect.py  qr_combiner.py  qr_detector.py  template_nodes.py  threshold_inRange.py  track_manager.py  utils.py
iarc_fuses/src/iarc_fuses/DaSiamRPN/: VID_20190327_195111_labels.p  demo.py  grabcut.py  imgtest.py  label_checker.py  video_labeler.py  vot_SiamRPN.py
iarc_fuses/src/iarc_fuses/detect/: color_detector.py  person_detect.py  person_helmet_detect.py  qr_combiner.py  qr_detector.py  yolo_drone_detector.py
iarc_fuses/src/iarc_fuses/track/: bbox_time_filter.py  track_manager.py
iarc_fuses/src/iarc_fuses/track/DaSiamRPN/: run_SiamRPN.py
iarc_fuses/src/iarc_fuses/utils/: __init__.py  box_utils.py  misc.py
iarc_main/: package.xml
iarc_main/launch/: ardrone_interface.launch  backbone.launch  brain.launch  onboarding_ardrone.launch  onboarding_simulator.launch
iarc_main/launch/multi/: n_drones.launch  n_drones.sh.broken  single_drone.launch  two_drones.launch
iarc_main/scripts/: bebop_keyboard.py  bebop_keyboard_multi.py  launch_observer.py  tf_relay.py
iarc_msgs/: CMakeLists.txt
iarc_msgs/msg/: IARCObject.msg  Identifier.msg
iarc_msgs/srv/: Detect.srv  Track.srv
iarc_sim_2d/launch/: basic.launch
iarc_sim_2d/scripts/: sim.py
iarc_sim_2d/src/iarc_sim_2d/: robots.py
iarc_sim_3d/: README.md  package.xml
iarc_sim_3d/launch/: sim.launch  sim_multi.launch  sim_single.launch  spawn_drone.launch
iarc_sim_3d/media/materials/scripts/: iarc.material
iarc_sim_3d/models/floor/: model.sdf
iarc_sim_3d/models/qr/: model.config  model.sdf
iarc_sim_3d/models/qr1/: model.config  model.sdf
iarc_sim_3d/models/qr2/: model.config  model.sdf
iarc_sim_3d/models/qr3/: model.config  model.sdf
iarc_sim_3d/models/qr4/: model.config  model.sdf
iarc_sim_3d/worlds/: iarc.world  sample.world
iarc_ui/: CMakeLists.txt  package.xml  setup.py
iarc_ui/src/iarc_ui/: whistle.py  whistle_original.py
libraries/bebop_autonomy/bebop_driver/launch/: bebop_node2.launch  bebop_node3.launch  bebop_node4.launch
libraries/bebop_autonomy/bebop_driver/src/: bebop_driver_nodelet.cpp
libraries/tum_simulator/cvg_sim_gazebo/urdf/sensors/: generic_camera.urdf.xacro
libraries/tum_simulator/cvg_sim_gazebo_plugins/src/: quadrotor_simple_controller.cpp
speech_recognition/: heal-bins-audio.3gp
speech_recognition/data/split/: text  wav.scp
whistle_recognition/: whistle.py
